# plug64

./: .gitmodules  CMakeLists.txt  README.md
Delay64/: CMakeLists.txt
Delay64/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Filter64/: CMakeLists.txt
Filter64/Source/: CustomLookAndFeel.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Gain64/: CMakeLists.txt
Gain64/Source/: CustomLookAndFeel.cpp  CustomLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Ring64/: CMakeLists.txt
Ring64/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Shared/: CustomLookAndFeel.cpp  CustomLookAndFeel.h
